--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@shadcn/ui": "^0.0.4",
     "@tabler/icons-react": "^3.26.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.15.0",
+    "framer-motion": "^11.16.0",
     "lucide-react": "^0.469.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "^14.0.4",
